# grpo_game

./: pyproject.toml
constants/: __init__.py  physics.py  simulation.py
neural_network/: model.py  utils.py
state_updaters/: __init__.py  object_movements.py  utils.py
tests/: test_model.py
