[project]
name = "grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jax>=0.5.3",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "pytest>=8.3.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
